feat : 루틴 상세 조회 API에 작성자 정보 추가
루틴 상세 조회 API 응답에 생성한 작성자의 정보를 포함함.
- 'AuthorInfo' DTO 생성 -> 작성자 정보 캡슐화
- RoutineQueryService : App, Tag, Schedule 등 여러 쿼리로 나뉘어 있던
  상세 정보 조회를 findWithAllDetailsById 메서드를 통해 단일 쿼리로 변경
  (N+1 문제 해결)
- UserProfileService : 사용자 루틴 목록 조회 시, 각 루틴의 태그를
  개별적으로 조회하던 로직 수정 -> 모든 태그를 한번에 가져오도록
- Routine의 타입을 List -> Set으로 변경함에 따라 발생한 컴파일 오류들
  해결
- @OrderBy를 추가하여 Set으로 변경 후에도 데이터 순서를 보장하도록 수정